--- a/src/components/RedoButton.module.scss
+++ b/src/components/RedoButton.module.scss
@@ -2,4 +2,5 @@
 
 .RedoButton {
   @include button;
+  position: relative;
 }
