--- a/src/components/UndoButton.module.scss
+++ b/src/components/UndoButton.module.scss
@@ -2,4 +2,5 @@
 
 .UndoButton {
   @include button;
+  position: relative;
 }
